--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 3,
-  "name": "Easy Download",
-  "description": "Tools help download images and videos on Facebook.",
-  "version": "1.0.3",
-  "author": "nguy3n47",
+  "name": "Facebook Download Extension",
+  "description": "Chrome extension to help download videos on Facebook.",
+  "version": "1.0.4",
+  "author": "lucthienphong1120",
   "icons": {
     "16": "assets/img/logo.png",
     "32": "assets/img/logo.png",
